--- a/backend/Shop/pom.xml
+++ b/backend/Shop/pom.xml
@@ -63,7 +63,7 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>5.7.2</version>
 		</dependency>
-
+		<!-- mvn liquibase:clearCheckSums -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-rsa -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -75,7 +75,11 @@
 			<artifactId>jjwt-api</artifactId>
 			<version>0.11.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.3.3.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
