--- a/backend/Shop/src/main/resources/application.properties
+++ b/backend/Shop/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
