--- a/backend/Shop/src/main/resources/application.properties
+++ b/backend/Shop/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=postgrespw
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.liquibase.enabled=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 excluded.paths="POST /users, POST /login, METHOD URI"
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
